0.33.0:
- general:
    - if the environment variable DUCC0_NUM_THREADS is not set, the cde will
      try to read OMP_NUM_THREADS to determine the maximum number of threads
      to use.

- sht:
    - make functions from `ducc0.sht.experimental` also available in
      `ducc0.sht`. The interface should have matured sufficiently by now.

- wgridder:
    - make functions `vis2dirty` and `dirty2vis` from
      `ducc0.wgridder.experimental` also available in `ducc0.wgridder`.
      The interface should have matured sufficiently by now.


0.32.0:
- general:
    - minimum required Python version is now 3.8

- math:
    - new code for calculating Wigner 3j symbols

- sht:
    - fix for non-adjointness between analysis and adjoint_analysis in cases
      where the input map is not band limited

- fortran:
    - outline of an interface for calls from Fortran. Requires Fortran 2018.


0.31.0:
- general:
    - potentially more efficient handling of parallel regions 
    - updated pyproject.toml to be compatible with new Python versions

- fft:
    - bug fix in orthonormalization of type II and III DSTs
    - significantly faster 1D FFTs; tuning of multi-D transforms

- sht:
    - bug fix for alm->map SHTs with nphi=1 and mmax>0
    - new `phi0` parameter for the `*_2d` SHT routines
    - optional `mstart` and `lstride` parameters for the `*_2d` SHT routines


0.30.0:
- general:
    - beginnings of a Rust wrapper

- fft:
    - transforming over a long, contiguous axis in a multi-D array should now
      be faster and scale better with the number of threads.

- sht:
    - new function `pseudo_analysis_general` for iterative least-squares
      analysis of spherical maps on arbitrary grids
    - rework of the general SHT routines, leading to more performance and
      smaller memory footprint
    - SHTs with spin>0 now have a gradient-only mode, which ignores the
      curl a_lm component.
    - new argument `theta_interpol`, which may accelerate SHTs on isolatitude